add redis config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -152,6 +152,9 @@ services:
     image: redis:latest
     ports:
       - "6379:6379"
+    command: redis-server /usr/local/etc/redis/redis.conf
+    volumes:
+      - ./config/redis.conf:/usr/local/etc/redis/redis.conf
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
