--- a/etc/my_master.cnf
+++ b/etc/my_master.cnf
@@ -6,7 +6,9 @@ transaction-isolation = READ-COMMITTED
 max_connections=1000
 log-bin=mysql-bin # 开启 binlog
 binlog-format=ROW # 选择 ROW 模式
+binlog-do-db=douyin
 server_id=1 # 配置 MySQL replaction 需要定义，不要和 canal 的 slaveId 重复
+
 default_time_zone = '+08:00'
 
 #
