--- a/etc/instance.properties
+++ b/etc/instance.properties
@@ -6,7 +6,7 @@
 canal.instance.gtidon=false
 
 # position info
-canal.instance.master.address=mysql:3306
+canal.instance.master.address=mysql-master:3306
 canal.instance.master.journal.name=
 canal.instance.master.position=
 canal.instance.master.timestamp=
