--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       consul:
         condition: service_healthy
     container_name: Api
-
+    
   feed:
     image: ghcr.io/chuxin0816/douyin:feed
     ports:
@@ -217,6 +217,39 @@ services:
       timeout: 2s
       retries: 3
     container_name: Redis-slave
+
+  redis-sentinel1:
+    image: redis:latest
+    ports:
+      - "26379:26379"
+    depends_on:
+      - redis-master
+    command: redis-sentinel /usr/local/etc/redis/sentinel.conf
+    volumes:
+      - ./etc/sentinel.conf:/usr/local/etc/redis/sentinel.conf
+    container_name: Redis-sentinel1
+
+  redis-sentinel2:
+    image: redis:latest
+    ports:
+      - "26380:26379"
+    depends_on:
+      - redis-master
+    command: redis-sentinel /usr/local/etc/redis/sentinel.conf
+    volumes:
+      - ./etc/sentinel.conf:/usr/local/etc/redis/sentinel.conf
+    container_name: Redis-sentinel2
+
+  redis-sentinel3:
+    image: redis:latest
+    ports:
+      - "26381:26379"
+    depends_on:
+      - redis-master
+    command: redis-sentinel /usr/local/etc/redis/sentinel.conf
+    volumes:
+      - ./etc/sentinel.conf:/usr/local/etc/redis/sentinel.conf
+    container_name: Redis-sentinel3
 
   mongo:
     image: mongo:latest
