--- a/cmd/docker/favorite/Dockerfile
+++ b/cmd/docker/favorite/Dockerfile
@@ -8,12 +8,12 @@ RUN go mod download
 
 COPY . .
 
-RUN cd src/rpc/service/favorite && sh build.sh
+RUN cd src/service/favorite && sh build.sh
 
 FROM scratch
 
 ENV TZ=Asia/Shanghai
 
-COPY --from=builder /douyin/src/rpc/service/favorite/output/bin/favorite /
+COPY --from=builder /douyin/src/service/favorite/output/bin/favorite /
 
 ENTRYPOINT ["/favorite"]
