添加prometheus和grafana服务及配置文件

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -365,6 +365,24 @@ services:
       retries: 3
     container_name: Consul
   
+  prometheus:
+    image: prom/prometheus:latest
+    volumes:
+      - ./etc/prometheus.yaml:/etc/prometheus/prometheus.yaml
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yaml"
+    ports:
+      - "9090:9090"
+
+  grafana:
+    image: grafana/grafana:latest
+    environment:
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_DISABLE_LOGIN_FORM=true
+    ports:
+      - "3000:3000"
+
   jaeger:
     image: jaegertracing/all-in-one:latest
     ports:
