--- a/etc/redis_slave.conf
+++ b/etc/redis_slave.conf
@@ -1,3 +1,6 @@
+requirepass 123456
+masterauth 123456
 maxmemory-policy allkeys-lru
 maxmemory 2gb
+loadmodule /opt/redis-stack/lib/redisbloom.so
 slaveof redis-master 6379
