--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -169,21 +169,21 @@ services:
     container_name: Canal
   
   redis-master:
-    image: redis:latest
+    image: redis/redis-stack-server:latest
     ports:
       - "6379:6379"
     command: redis-server /usr/local/etc/redis/redis.conf
     volumes:
       - ./etc/redis_master.conf:/usr/local/etc/redis/redis.conf
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ["CMD", "redis-cli", "-a", "123456", "ping"]
       interval: 10s
       timeout: 2s
       retries: 3
     container_name: Redis-master
 
   redis-slave:
-    image: redis:latest
+    image: redis/redis-stack-server:latest
     ports:
       - "6380:6379"
     depends_on:
@@ -193,7 +193,7 @@ services:
     volumes:
       - ./etc/redis_slave.conf:/usr/local/etc/redis/redis.conf
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ["CMD", "redis-cli", "-a", "123456", "ping"]
       interval: 10s
       timeout: 2s
       retries: 3
