--- a/etc/sentinel.conf
+++ b/etc/sentinel.conf
@@ -1,5 +1,7 @@
+requirepass 123456
 sentinel resolve-hostnames yes
 sentinel monitor mymaster redis-master 6379 2
+sentinel auth-pass mymaster 123456 
 sentinel down-after-milliseconds mymaster 5000
 sentinel failover-timeout mymaster 15000
 sentinel parallel-syncs mymaster 1
