--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,8 +113,10 @@ services:
     depends_on:
       consul:
         condition: service_healthy
-      mongo:
+      mysql-master:
         condition: service_healthy
+      mysql-slave:
+        condition: service_healthy 
       redis-slave:
         condition: service_healthy
       kafka-ui:
@@ -231,19 +233,6 @@ services:
     volumes:
       - ./etc/sentinel.conf:/usr/local/etc/redis/sentinel.conf
     container_name: Redis-sentinel3
-
-  mongo:
-    image: mongo:latest
-    ports:
-      - "27017:27017"
-    volumes:
-      - ./etc/message.js:/docker-entrypoint-initdb.d/message.js
-    healthcheck:
-      test: ["CMD", "echo", "db.runCommand(\"ping\").ok", "|", "mongosh", "localhost:27017/test", "--quiet"]
-      interval: 10s
-      timeout: 2s
-      retries: 3
-    container_name: Mongo
 
   kafka-0:
     image: bitnami/kafka:latest
@@ -373,6 +362,7 @@ services:
       - "--config.file=/etc/prometheus/prometheus.yaml"
     ports:
       - "9090:9090"
+    container_name: Prometheus
 
   grafana:
     image: grafana/grafana:latest
@@ -382,6 +372,7 @@ services:
       - GF_AUTH_DISABLE_LOGIN_FORM=true
     ports:
       - "3000:3000"
+    container_name: Grafana
 
   jaeger:
     image: jaegertracing/all-in-one:latest
