--- a/etc/config.yaml
+++ b/etc/config.yaml
@@ -41,6 +41,7 @@ database:
       - redis-sentinel1:26379
       - redis-sentinel2:26379
       - redis-sentinel3:26379
+    sentinel_password: 123456
     password: 123456
     db: 0
 
